laguage fr for html tag

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-
     <div id="myMap"></div>
 
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
